<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_logo_description"
        android:src="@drawable/icon_foreground" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ReceiveSMSnotifications"
        android:textSize="16sp"
        android:layout_marginTop="16dp"/>


    <Button
        android:id="@+id/requestPermissionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grant_permission_button"
        android:layout_marginTop="16dp"/>


    <LinearLayout
        android:id="@+id/notificationSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:orientation="vertical">

    </LinearLayout>

    <Button
        android:id="@+id/remindMeLaterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remind_me_later_button"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/phoneNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_phone_number"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/successMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""
        android:layout_marginTop="16dp"/>
</LinearLayout>