<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/headerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inventory"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:paddingTop="16dp"/>

    <!-- Horizontal LinearLayout for Buttons -->
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerLabel"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">


        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_item"
            android:layout_marginEnd="8dp"
            android:paddingTop="16dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_item_count"
            android:layout_marginEnd="8dp"
            android:paddingTop="16dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_item"
            android:paddingTop="16dp"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLayout"
        android:horizontalSpacing="16dp"
        android:verticalSpacing="16dp"
        android:layout_marginTop="0dp"
        android:numColumns="2"
        android:padding="16dp"


        >


    </GridView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:contentDescription="@string/submit"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/baseline_doorbell_24"
        />
</RelativeLayout>