<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1,2">
        <TableRow>
            <TextView
                android:layout_span="3"
                android:text="@string/LoginText"
                android:textSize="36sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="48dp"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
            />
        </TableRow>

        <TableRow>
            <EditText
                android:layout_span="3"
                android:id="@+id/username_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:autofillHints="username"
                android:hint="@string/usernameFiller"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp" />

        </TableRow>

        <TableRow>
            <EditText
                android:layout_span="3"
                android:id="@+id/password_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:autofillHints="password"
                android:hint="@string/passwordFiller"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/login_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="4dp"
                android:text="@string/loginButtonText" />

            <Button
                android:layout_column="2"
                android:id="@+id/signup_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="4dp"
                android:text="@string/signUp" />
        </TableRow>




    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>